Bug fix: address.create_and_verify is now a classmethod.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 2.0.2 2013-07-07
+
+* Bug fix: address.create_and_verify is now a classmethod.
+
 === 2.0.1 2013-07-05
 
 * Added function to Address to all creating and verifying at the same time.
