API Addition: Shipment.track_with_code returns tracking details for any tracking code.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,12 @@
+=== 2.0.3 2013-07-23
+
+* API Addition: Shipment.track_with_code returns tracking details for any tracking code.
+
+
 === 2.0.2 2013-07-07
 
 * Bug fix: address.create_and_verify is now a classmethod.
+
 
 === 2.0.1 2013-07-05
 
