--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+=== 2.0.4 2013-07-31
+
+* API Addition: Tracker resource added. Trackers can be used to register any tracking code with EasyPost webhooks.
+
+
 === 2.0.3 2013-07-23
 
 * API Addition: Shipment.track_with_code returns tracking details for any tracking code.
