Bug Fix: UTF-8 input handled more gracefully.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+=== 2.0.5 2013-09-22
+
+* Bug Fix: UTF-8 input handled more gracefully.
+
+
 === 2.0.4 2013-07-31
 
 * API Addition: Tracker resource added. Trackers can be used to register any tracking code with EasyPost webhooks.
