Added Event resource. Added Batch.buy method.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+=== 2.0.6 2013-10-17
+
+* Added Event resource for webhook digestion.
+* Added buy method to Batch.
+
+
 === 2.0.5 2013-09-22
 
 * Bug Fix: UTF-8 input handled more gracefully.
