Added Pickup cancellation method.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,13 @@
+=== 2.0.10 2014-09-10
+
+* Added Pickup cancellation method.
+
+
+=== 2.0.9 2014-09-02
+
+* Added Pickup resource for scheduling pickups.
+
+
 === 2.0.6 2013-10-17
 
 * Added Event resource for webhook digestion.
