--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 2.0.15 2015-07-31
+
+* Fixed bug with address verification url rendering
+
 === 2.0.14 2015-03-30
 
 * Fix numerous bugs, including Python3 encoding
