added a carrier_types example and bumped version

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 2.0.16 2015-08-10
+
+* Added ability to interact with carrier accounts (full CRUD)
+
 === 2.0.15 2015-07-31
 
 * Fixed bug with address verification url rendering
