--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 2.0.17 2015-08-11
+
+* Added ability to interact with Users (create, retrieve and update)
+
 === 2.0.16 2015-08-10
 
 * Added ability to interact with carrier accounts (full CRUD)
