Fixed bug where retrieving a shipment by tracking code or reference doesn't set the ID properly

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 2.0.17 2015-10-19
+
+* Fixed bug where retrieving a shipment by tracking code or reference doesn't set the ID properly
+
 === 2.0.16 2015-08-10
 
 * Added ability to interact with carrier accounts (full CRUD)
