updated changelog and bumped version number

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 3.0.1 2015-11-04
+
+* Fixed some examples and added some new ones, particularly dealing with Tracker.all
+
 === 3.0.0 2015-10-19
 
 * Fixed bug where retrieving a shipment by tracking code or reference doesn't set the ID properly
