Added a Tracker.create_list method for creating a large number of Trackers at once.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,35 +1,49 @@
+=== 3.0.2 2015-11-10
+
+* Added a Tracker.create_list method for creating a large number of Trackers
+at once
+
+
 === 3.0.1 2015-11-04
 
 * Fixed some examples and added some new ones, particularly dealing with Tracker.all
+
 
 === 3.0.0 2015-10-19
 
 * Fixed bug where retrieving a shipment by tracking code or reference doesn't set the ID properly
 
+
 === 2.0.16 2015-08-10
 
 * Added ability to interact with carrier accounts (full CRUD)
+
 
 === 2.0.15 2015-07-31
 
 * Fixed bug with address verification url rendering
 
+
 === 2.0.14 2015-03-30
 
 * Fix numerous bugs, including Python3 encoding
 
+
 === 2.0.13 2015-01-09
 
 * Added python3 support
+
 
 === 2.0.12 2014-11-04
 
 * Added tracker to shipment response
 * Added tracker example
 
+
 === 2.0.11 2014-09-19
 
 * Added Order support.
+
 
 === 2.0.10 2014-09-10
 
