Added a Tracker.all_updated method for retrieving a large number of Trackers by status or tracking_details updated datetime

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+=== 3.0.3 2015-11-16
+
+* Added a Tracker.all_updated method for retrieving a large number of Trackers
+by status or tracking_details updated datetime
+
+
 === 3.0.2 2015-11-10
 
 * Added a Tracker.create_list method for creating a large number of Trackers
