--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+=== 3.0.4 2015-11-16
+
+* Minor bugfix
+
+
 === 3.0.3 2015-11-16
 
 * Added a Tracker.all_updated method for retrieving a large number of Trackers
