--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+=== 3.0.5 2015-11-18
+
+* Changed the interface on Tracker.create_list to return True rather than the
+Trackers themselves
+
+
 === 3.0.4 2015-11-16
 
 * Minor bugfix
