Added Blob.retrieve for fetching urls for blobs stored by EasyPost.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+=== 3.0.6 2015-11-24
+
+* Added Blob.retrieve for fetching urls for blobs stored by EasyPost.
+
+
 === 3.0.5 2015-11-18
 
 * Changed the interface on Tracker.create_list to return True rather than the
