--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+=== 3.1.0 2015-12-08
+
+* Add verifications to Address.create
+
+
 === 3.0.6 2015-11-24
 
 * Added Blob.retrieve for fetching urls for blobs stored by EasyPost.
@@ -44,7 +49,6 @@ at once
 === 2.0.15 2015-07-31
 
 * Fixed bug with address verification url rendering
-
 
 === 2.0.14 2015-03-30
 
