--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+=== 3.1.1 2016-02-12
+
+* Added ability to interact with Users (create, retrieve and update)
+
+
 === 3.1.0 2015-12-08
 
 * Add verifications to Address.create
