--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+=== 3.1.2 2016-03-04
+
+* Added a suite of unittest tests. Thanks wyounas!
+
+
 === 3.1.1 2016-02-12
 
 * Added ability to interact with Users (create, retrieve and update)
