--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+=== 3.1.3 2016-05-17
+
+* Remove api_keys from object dumps
+* Fixed address tests to keep them in line with the new API messages
+
+
 === 3.1.2 2016-03-04
 
 * Added a suite of unittest tests. Thanks wyounas!
