changed version 3.1.3 to 3.2.0 since it should be a minor version bump instead of a patch version bump

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,8 @@
-=== 3.1.3 2016-05-17
+=== 3.2.0 2016-05-17
 
 * Remove api_keys from object dumps
 * Fixed address tests to keep them in line with the new API messages
+* This was previously known as version 3.1.3
 
 
 === 3.1.2 2016-03-04
