--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+=== 3.2.1 2016-07-18
+
+* Added to_json method for EasyPost object. Thanks ThePsyjo!
+
+
 === 3.2.0 2016-05-17
 
 * Remove api_keys from object dumps
