--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+=== 3.2.2 2016-07-29
+
+* Added support for Insurance objects
+
+
 === 3.2.1 2016-07-18
 
 * Added to_json method for EasyPost object. Thanks ThePsyjo!
