--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+=== 3.5.0 2017-01-18
+
+* Added basic CRUD methods for Webhook Objects
+* Fixed Order test
+
+
 === 3.4.0 2016-12-20
 
 * Added session pooling
